--- a/main.html
+++ b/main.html
@@ -8,6 +8,46 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class="main-container">
+		<header>
+			<h1>3-Idiots</h1>
+		</header>
+           <nav>
+			<a href="http://" id="nav-actor" target="_blank" rel="noopener noreferrer">About Actors</a>
+			<a href="http://" target="_blank" id="nav-quote" rel="noopener noreferrer">Movies Dialogue</a>
+		   </nav>
+		
+		<summary>
+			Two friends are searching for their long lost companion. They revisit their college days and recall the memories of their friend who inspired them to think differently, even as the rest of the world called them "idiots".
+		</summary>
+		<main>
+		<section id="actor">
+
+        <p> Aamir Khan as Ranchhoddas "Rancho" Shyamaldas Chanchad / Phunsukh Wangdu</p>
+        <p>R. Madhavan as Farhan Qureshi</p>
+        <p>Sharman Joshi as Raju Rastogi</p>
+        <p>Kareena Kapoor as Pia Sahastrabuddhe, a successful doctor and Rancho’s love interest</p>
+        <p>Boman Irani as Dr. Viru "Virus" Sahastrabuddhe</p>
+        <p>Omi Vaidya as Chatur "Silencer" Ramalingam</p>
+
+		</section>
+		<section id="quote">
+          <p>"All is Well"</p>
+		  <p>"aaj raat ko bina hole bali underwear phnana"</p>
+		  <p>life is a race if u can't run u will lose</p>
+		  <p>Dost fail ho jaye toh dukh hota hai … Lekin dost first aa jaye toh zyaada dukh hota hai
+
+		  </p>
+		</section>
+	</main>
+		<aside>
+           <p>IMDB Rating: 5 star</p>
+		   <p>Release Date: 5 june 2009</p>
+		</aside>
+		<footer>
+          
+		</footer>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
