--- a/main.html
+++ b/main.html
@@ -13,8 +13,8 @@
 			<h1>3-Idiots</h1>
 		</header>
            <nav>
-			<a href="http://" id="nav-actor" target="_blank" rel="noopener noreferrer">About Actors</a>
-			<a href="http://" target="_blank" id="nav-quote" rel="noopener noreferrer">Movies Dialogue</a>
+			<a href="#actor" id="nav-actor" target="_blank" rel="noopener noreferrer">About Actors</a>
+			<a href="#quote" target="_blank" id="nav-quote" rel="noopener noreferrer">Movies Dialogue</a>
 		   </nav>
 		
 		<summary>
@@ -45,7 +45,7 @@
 		   <p>Release Date: 5 june 2009</p>
 		</aside>
 		<footer>
-          
+          <p>Produced by: &lt; Vinod Chopra &gt;</p>
 		</footer>
 	</div>
     <script type="text/javascript" src="./script.js">
